<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.scfappv1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.scfappv1.ui.dashboard.DashboardFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.scfappv1.ui.notifications.NotificationsFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_team"
        android:name="com.example.scfappv1.ui.team.TeamFragment"
        android:label="@string/title_team"
        android:visibility="invisible"
        tools:layout="@layout/fragment_team" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.scfappv1.ui.account.AccountFragment"
        android:label="@string/title_acc"
        android:visibility="invisible"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_add_user"
        android:name="com.example.scfappv1.ui.addUser.AddUserFragment"
        android:label="@string/title_addUsr"
        android:visibility="invisible"
        tools:layout="@layout/fragment_add_user" />

    <fragment
        android:id="@+id/navigation_edit_shift"
        android:name="com.example.scfappv1.ui.editShift.EditShiftFragment"
        android:label="Edit"
        android:visibility="invisible"
        tools:layout="@layout/fragment_add_user" />

    <fragment
        android:id="@+id/navigation_add_diary_entry"
        android:name="com.example.scfappv1.ui.addDiaryEntry.AddDiaryEntryFragment"
        android:label="@string/title_addDiaryEntry"
        android:visibility="invisible"
        tools:layout="@layout/fragment_add_diary_entry"/>

</navigation>